<resources>
    <string name="app_name">AirApi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="edit_name">Name</string>
    <string name="edit_surname">Surname</string>
    <string name="button_add_user">Add</string>
    <string name="edit_email">Email</string>
    <string name="edit_firstPassword">Password</string>
    <string name="edit_secondPassword">Repeat Password</string>
    <string name="edit_login_email">Login</string>
    <string name="edit_login_password">Password</string>
    <string name="button_login">Sign in</string>
</resources>
